chore: update keywords

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": [
     "datetime",
     "pretty date",
-    "pretty diff"
+    "pretty print"
   ],
   "type": "library",
   "license": "MIT",
